# macos-dictionary-builder

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  sample.txt
src/: __init__.py  cli.py  devkit.py  meta.py  parse.py  parser.py
src/resources/: catalog  style.css
